--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Carpette salon trois rivieres</title>
     <meta name="description" content="Nettoyage de carpette de salon à Trois-Rivières">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=a80ef604044dfda317d8b538ae493032">
+    <link rel="icon" href="favicon.ico" />
 </head>
 
 <body>
